--- a/EditEvent.resx
+++ b/EditEvent.resx
@@ -144,4 +144,7 @@
   <metadata name="GetEventInfoCommand.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>338, 54</value>
   </metadata>
+  <metadata name="UpdateVideoEditingSumDurationCommand.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>517, 54</value>
+  </metadata>
 </root>
