--- a/NewEvent.resx
+++ b/NewEvent.resx
@@ -138,4 +138,7 @@
   <metadata name="AddNewEventCommand.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 54</value>
   </metadata>
+  <metadata name="UpdateVideoEditingSumDurationCommand.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>803, 54</value>
+  </metadata>
 </root>
