Video Editing props editing on editing broadcasts form

--- a/BroadcastPlaybackPlanForm.resx
+++ b/BroadcastPlaybackPlanForm.resx
@@ -150,4 +150,7 @@
   <metadata name="sqlConnection1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>211, 91</value>
   </metadata>
+  <metadata name="ChangeVideomaterialPropsCommand.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>348, 91</value>
+  </metadata>
 </root>
